--- a/index.html
+++ b/index.html
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FORM</title>
-    <style>
-      body {
-        background-color: rgb(145, 164, 179);
-        margin: 0%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100vw;
-      }
 
-      form {
-        display: flex;
-        flex-direction: column;
-        height: 90vh;
-        border-radius: 5px;
-        width: 40vw;
-        background-color: white;
-        align-items: center;
-        justify-content: space-evenly;
-      }
-      form > h1 {
-        color: rgba(0, 0, 0, 0.644);
-        border-bottom: 1px solid rgba(0, 0, 0, 0.644);
-        width: 10vw;
-        text-align: center;
-        padding-bottom: 1vmax;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-      }
-      form > input {
-        padding: 1vmax;
-        width: 30vw;
-        outline: none;
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
-        font-size: 1.3vmax;
-        border: none;
-        border-bottom: 1px solid rgba(70, 70, 70, 0.5);
-      }
-      form > input[type="submit"] {
-        width: 20vw;
-        border: none;
-        cursor: pointer;
-        background-color: #eb4034;
-        color: white;
-        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-        font-size: 1.4vmax;
-        transition: all 0.5s;
-      }
-      form > input[type="submit"]:hover {
-        background-color: #c4342a;
-      }
-    </style>
-  </head>
-  <body>
-    <form action="/api/v1/register" method="POST">
-      <h1>REGISTER</h1>
-      <input placeholder="Enter Your Name" type="text" name="name" id="name" />
-      <input
-        placeholder="Enter Your Email"
-        type="email"
-        name="email"
-        id="email"
-      />
-      <input
-        placeholder="Enter Your Password"
-        type="password"
-        name="password"
-        id="password"
-      />
-      <input type="submit" value="Login" />
-    </form>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Form Submission</title>
+  <style>
+    body {
+      background-color: rgba(78, 103, 122, 0.854);
+      margin: 0%;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      height: 90vh;
+      border-radius: 5px;
+      width: 40vw;
+      background-color: white;
+      align-items: center;
+      justify-content: space-evenly;
+    }
+
+    form>h1 {
+      color: rgba(0, 0, 0, 0.644);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.644);
+      width: 10vw;
+      text-align: center;
+      padding-bottom: 1vmax;
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    }
+
+    form>input {
+      padding: 1vmax;
+      width: 30vw;
+      outline: none;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
+      font-size: 1.3vmax;
+      border: none;
+      border-bottom: 1px solid rgba(127, 9, 9, 0.685);
+    }
+
+    form>input[type="submit"] {
+      width: 20vw;
+      border: none;
+      cursor: pointer;
+      background-color: #7ea91a;
+      color: white;
+      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+      font-size: 1.4vmax;
+      transition: all 0.5s;
+    }
+
+    form>input[type="submit"]:hover {
+      background-color: #708603;
+    }
+  </style>
+</head>
+
+<body>
+  <form action="/register" method="POST">
+    <h1>REGISTER</h1>
+    <input placeholder="Enter Your Name" type="text" name="name" id="name" />
+    <input placeholder="Enter Your Email" type="email" name="email" id="email" />
+    <input placeholder="Enter Your Password" type="password" name="password" id="password" />
+    <input type="submit" value="Login" />
+
+  </form>
+  <form action="/user" method="GET">
+    <input type="submit" value="User" />
+  </form>
+
+
+  <form action="/user" method="DELETE">
+    <input1 type="submit" value="Delete" />
+  </form>
+</body>
+
 </html>
