--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   </form>
 
 
-  <form action="/user" method="DELETE">
-    <input1 type="submit" value="Delete" />
+  <form action="/deleted" method="DEL">
+    <input type="submit" value="Delete" />
   </form>
 </body>
 
